--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@ html{
     --color-grey-400: rgb(134, 134, 134);
     --color-grey-600: rgb(58, 58, 58);
     --color-grey-900: rgb(41, 41, 41);
-    --color-primary-500:rgb(167, 226, 255);
-    --color-primary-700:rgb(0, 24, 59);
+    --color-primary-500:rgb(158, 248, 218);
+    --color-primary-700:rgb(1, 16, 39);
+    --color-effect-blue: blue; 
 }
 
 
@@ -56,7 +57,7 @@ a{
     color: aliceblue;
 }
 #main-header li:hover{
-    background-color: var(--color-primary-700) ;
+    background-color: var(--color-effect-blue) ;
 }
 
 #side-menu{
@@ -105,7 +106,7 @@ h2{
 }
 
 #downloads a{
-    color: blue;
+    color: var(--color-effect-blue);
 
 }
 
