--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html{
     --color-grey-600: rgb(58, 58, 58);
     --color-grey-900: rgb(41, 41, 41);
     --color-primary-500:rgb(158, 248, 218);
-    --color-primary-700:rgb(1, 12, 29);
+    --color-primary-700:rgb(0, 10, 24);
     --color-effect-blue: rgb(0, 162, 255); 
 }
 
@@ -22,7 +22,7 @@ body{
     position: fixed;
     height: 4.8rem;
     width: 100%;
-    justify-content: space-between;
+    justify-content: left;
     align-items: center;
     padding: 0 5%;
     
@@ -59,11 +59,54 @@ a{
     background-color: var(--color-effect-blue) ;
 }
 
-#side-menu{
-    width: 1rem;
-    height: 1rem;
-    color: black;
+.menu-btn {
+    display: none;
+    position:  absolute;
+    margin: 0;
+    left: 80%;
+    width: 30px;
+    height: 30px;
+
 }
+
+#side-drawer{
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-grey-100);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+#side-drawer:target{
+    display: block;
+}
+#side-drawer header{
+    height: 5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 5%;
+}
+
+#side-drawer ul{
+    list-style: none;
+    margin: 0;
+    padding: 4rem 1rem ;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+#side-drawer li{
+ margin: 1rem 0;
+}
+
+#side-drawer a{
+    font-size: 2rem;
+}
+
 
 .container-text-center{
     background-color: var(--color-primary-700);
@@ -115,7 +158,7 @@ h2{
 
 
 /*max widh-> desktop to mobile*/
-/* @media(max-width: 940px){
+@media(max-width: 940px){
 
 
     #main-header nav {
@@ -126,6 +169,9 @@ h2{
 
     .menu-btn{
         display: flex;
+        justify-content: flex-end;
+        position: fixed;
+
     }
         main h1{
             font-size: 1.5rem;
@@ -136,5 +182,5 @@ h2{
     
         }
       
-    } */
+    }
     
