--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ a{
     list-style: none;
     display: flex;
     margin: 0;
-    padding: 0;
+    padding: 0 6rem;
 }
 #main-header li{
     margin: 0 1rem; 
@@ -61,13 +61,15 @@ a{
 
 .menu-btn {
     display: none;
-    position:  absolute;
-    margin: 0;
-    left: 80%;
+    display: flex;
+    margin: 0 ;
     width: 30px;
     height: 30px;
+    padding: 0 ;
 
 }
+
+
 
 #side-drawer{
     width: 100%;
@@ -86,7 +88,7 @@ a{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 0 5%;
+    padding: 0 8%;
 }
 
 #side-drawer ul{
@@ -169,9 +171,7 @@ h2{
 
     .menu-btn{
         display: flex;
-        justify-content: flex-end;
-        position: fixed;
-
+    
     }
         main h1{
             font-size: 1.5rem;
