--- a/styles.css
+++ b/styles.css
@@ -61,12 +61,15 @@ a{
 
 .menu-btn {
     display: none;
-    display: flex;
-    margin: 0 ;
-    width: 30px;
-    height: 30px;
+    display:  flex;
+    margin: 0;
     padding: 0 ;
 
+}
+
+.menu-btn img{
+    width: 2rem;
+    height: 2rem;    
 }
 
 
