--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ html{
     --color-grey-900: rgb(41, 41, 41);
     --color-primary-500:rgb(158, 248, 218);
     --color-primary-700:rgb(0, 0, 0);
-    --color-effect-blue: rgb(0, 162, 255); 
-    --color-effect-pink: rgb(250, 149, 171);
+    --color-effect-pinky: rgb(248, 83, 185); 
+    --color-effect-pink: rgb(248, 162, 198);
 }
 
 
@@ -20,6 +20,11 @@ body{
 
 
 }
+
+h1{
+    text-shadow: 1px 1px 2px var(--color-effect-pinky);
+}
+
 h4{
     color: var(--color-effect-pink);
 }
@@ -46,7 +51,7 @@ a{
 }
 
 #logo img{
-    height: 5rem;
+    height: 4.8rem;
     margin: 0 2rem;
     padding: 1rem;
     align-content: center;
@@ -67,7 +72,7 @@ a{
     color: aliceblue;
 }
 #main-header li:hover{
-    background-color: var(--color-effect-blue) ;
+    background-color: var(--color-effect-pinky) ;
 }
 
 .menu-btn {
@@ -109,7 +114,7 @@ a{
 
 #side-drawer ul{
     list-style: none;
-    margin: 0;
+    margin: 30px 30px 30px;
     padding: 4rem 1rem ;
     display:flex;
     flex-direction: column;
@@ -152,11 +157,11 @@ a{
 
 .container h2{
     color: var(--color-grey-100);
-    text-shadow: 2px 2px 4px var(--color-effect-blue);
+    text-shadow: 1px 1px 2px var(--color-effect-pinky);
 }
 
 #downloads a{
-    color: var(--color-effect-blue);
+    color: var(--color-effect-pinky);
 }
 
 
@@ -192,6 +197,13 @@ h2{
     padding: 0 ;
     align-content: center;
     
+}
+
+#time-effort img {
+
+    width: 37rem;
+    height: 28rem;
+
 }
 
 
@@ -232,6 +244,7 @@ footer li{
 footer img{
     width: 100%;
     height: 100%;
+    border-radius: 18px;
 
 }
 
